# curie

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  data_manifest.toml  pyproject.toml  pytest.ini  setup.py  test_calib.json  update.sh  water.json
.github/workflows/: ci.yml  docs.yml  release.yml
curie/: __init__.py  _diagnostics.py  _log.py  calibration.py  compound.py  data.py  data_registry.json  decay_chain.py  element.py  isotope.py  library.py  plotting.py  query.py  reaction.py  spectrum.py  stack.py  yields.py
docs/: requirements.txt
docs/source/: beginners_guide.rst  conf.py  data_sources.rst  index.rst  intro.rst  license.rst  methods.rst  quickinstall.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: calibration.rst  compound.rst  decaychain.rst  element.rst  index.rst  isotope.rst  library.rst  logging.rst  plotter.rst  stack.rst
examples/: eu_calib.Chn  eu_calib_7cm.Spe  example_compounds.csv  example_compounds.json  isotope_decay_examples.py  peak_data.csv  reaction_examples.py  spectroscopy_examples.py  stack_examples.py  stacked_target_analysis.py  test.csv  test_fluxes.csv  test_spec.csv  test_spec.json  test_stack.csv  testing.py
scripts/: shard_endf.py  shard_library.py
tests/: conftest.py  test_api_structure.py  test_bateman.py  test_calibration_models.py  test_data_distribution.py  test_diagnostics.py  test_fit_filters.py  test_interpolation.py  test_lazy_data.py  test_library_values.py  test_logging.py  test_plots.py  test_spectrum_reference.py  test_stopping.py
(+29 files in other folders)
